-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0 Alpha
-
None
-
Windows Phone 8.1 on Lumia 820
-
-
54521ea05d2208a31b6111d5b9248ca7bf2f97ec
It's possible to get an unhandled exception when trying to focus with a lumia phone:
Steps to reproduce:
- Open declarative-camera example
- Switch to back camera
- "Focus" (causes 'ASSERT failure in bool __cdecl QWinRTCameraControl::focus(void): "The application called an interface that was marshalled for a different thread.", file D:\dev\source\qt5.8\qtmultimedia\src\plugins\winrt\qwinrtcameracontrol.cpp, line 1265')
- "Focus" button becomes "Focusing" (and does not return to "Focus" when focusing is finished)
- Press "Focusing" button -> Unhandled exception at 0x67B039E5 (winrtengined.dll) in declarative-camera.exe: 0xC0000005: Access violation reading location 0x00000000.
For Gerrit Dashboard: QTBUG-56034 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
171178,3 | winrt: Fix crash when locking/unlocking focus | 5.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |