winrt: Fix crash when locking/unlocking focus

The lock/unlock operation has to be created in the Xaml thread.

Task-number: QTBUG-56034
Change-Id: I450ad0ba4a8f1275f878917bcd16c31fbf87e164
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>